# moe-mpc

./: CMakeLists.txt  README.md
analysis/: rom_demo_analysis.mlx
matlab/: test.m
src/: moe_model_generate.cpp  moe_model_generate_one_dof.cpp  paper_video.cpp  rom_demo_mpc.cpp  rom_demo_mpc_one_dof.cpp
